
.Incompatibilities:
* In SQLEngine::transform '-' postfix needs to be converted to '\_' to omit table alias like `INSERT INTO $t.painTableName ($t.colName_) VALUES (1)`
* Removal of Internet Explorer support
* javax to jakarta switch (for several packages e.g. javax.servlet)
* new 3rd party jars set
* cookies created are flagged as "secure", requiring https
* add BindingInfo servlet to web.xml
* OAuth2 configuration in shiro.ini: OAuthAuthenticatingFilter properties renamed: authScope to scope, redirectUrl to redirectUri
* wrq filter operator like automatically escapes %, _ and \ now. Don't use local workarounds where you add \ yourself.
* bcdui.config.userName now holds the value from bcdui_sec_user.name not user_login anymore

___
==== Release 5_6_0

.Major new features:
** Added support for joins, CTEs, set operators and sub-selects to Wrq
** SubjectPreferences for user-chosen SubjectSettings
** Api stubs for JavaScript auto-suggest and inline help in IDEs
** Fully supporting MySQL and Redshift now
** Security improvements

.Server:
* Wrq does support CTE common table expressions, joins and unions now
* Extend SQL analytical functions in Wrq
* Added CASE WHEN and comparision operators to Wrq
* Allow client sided setting of subject preferences via SubjectPreferences servlet and SubjectPreferencesRealm, using config from bcdui/conf/subjectPreferences.xml
* Introduced UserSettingsDefaults to subjectSettings.xml to specify user default permissions (add de.businesscode.bcdui.subjectsettings.SubjectPreferencesRealm to your realms)
* Introduced "bcdAny:" shiro user rights (automatically created internally from your user rights) which allow testing on right type level (and not value)
* Database syntax does fully support MySQL and Redshift now
* Server sided access to bindings can optionally skip subject settings via backendCanBypassSubjectFilter attribute
* SendMail class added (new gradle dependencies javax.mail:mail, com.sun.activation)

.Client: