@@ -42,6 +42,8 @@ bcdAuthc = de.businesscode.bcdui.subjectsettings.AuthenticationFilter
 # oauthcAzureRealm.clientSecret           = ##client-secret##
 # oauthcAzureRealm.tokenEndpoint          = https://login.microsoftonline.com//##tenant-id##/oauth2/token
 # oauthcAzureRealm.principalPropertyName  = unique_name
+# oauthcAzureRealm.fullNamePropertyName   = name
+# oauthcAzureRealm.emailPropertyName      = upn
 ## Google
 # oauthcGoogle                            = de.businesscode.bcdui.subjectsettings.oauth2.OAuthAuthenticatingFilter
 # oauthcGoogle.optionalProviderId         = google
@@ -50,10 +52,11 @@ bcdAuthc = de.businesscode.bcdui.subjectsettings.AuthenticationFilter
 # oauthcGoogle.clientId                   = ##client-id##
 # oauthcGoogleRealm                       = de.businesscode.bcdui.subjectsettings.oauth2.OAuthRealm
 # oauthcGoogleRealm.authenticator         = $oauthcGoogle
-# oauthcGoogleRealm.apiEndpoint           = https://www.googleapis.com/oauth2/v3/userinfo
 # oauthcGoogleRealm.clientSecret          = ##client-secret##
 # oauthcGoogleRealm.tokenEndpoint         = https://www.googleapis.com/oauth2/v4/token
 # oauthcGoogleRealm.principalPropertyName = email
+# oauthcGoogleRealm.fullNamePropertyName  = name
+# oauthcGoogleRealm.emailPropertyName     = email
 
 ## To use OAuth authentication along with BCD-UI authorization, add this. If the login found in bcd_sec_user, the id of the user is used for authorization, otherwise the login
 ## Make sure $realmBcdJdbc comes after any external authentication as it handles the authorization based on it
