@@ -36,7 +36,12 @@ ___
 * new 3rd party jars set
 * cookies created are flagged as "secure", requiring https
 * add BindingInfo servlet to web.xml
-* OAuth2 configuration in shiro.ini: OAuthAuthenticatingFilter properties renamed: authScope to scope, redirectUrl to redirectUri
+* OAuth2 configuration in shiro.ini:
+** OAuthAuthenticatingFilter properties renamed: authScope to scope, redirectUrl to redirectUri, apiEndpoint to userInfoEndpoint
+** `redirectUri` became optional, and this value is then derived from Servlet context at runtime instead, supporting virtual hosts
+** `userInfoEndpoint` became optional, the user-id is then derived directly from the id-token send from the token endpoint. The call to user info endpoint is then skipped.
+** oAuth now requires a popup for the login window, this looks more consistent and allows for cookie SameSite=strict setting
+** OAuth Realms now need to create the session on successful login and cannot rely on JdbcRealm doing that anymore
 * wrq filter operator like automatically escapes %, _ and \ now. Don't use local workarounds where you add \ yourself.
 * bcdui.config.userName now holds the value from bcdui_sec_user.name not user_login anymore
 
@@ -67,6 +72,8 @@ ___
 * checkbox and singleSelect widget have a new skin (switch/panel) parameter for a horizontal slider switch / horizontal switch panel
 * label widget added
 * chips widget added
++
+image::releaseNodes/chipsChooserWidget.png[200,200]
 * inputLookup widget added
 * cube/cubeModel parameter requestChain added to allow custom request builders
 * sticky table (rows/cols) functionality added (either via htmlBuilder parameters or cube layout cube:Freeze element)
@@ -330,6 +337,7 @@ The Renderer either works directly with the specified element or (in case of spe
 * FAR module is optional, specify it in your bcduiLoadFiles attribute
 * Increased timeout for bcd_sec_usersettings is now 1 hour, was 2 min
 * In some cases requestDocumentBuilder.xslt, also used in AutoModel, did not limit the bRefs from filters to those given in the list, no it does. If setup incorrectly before, they are missing now.
+* Successful login is no longer sending a redirect to originally requested URL but sending this in header X-BCD.Location. Use new Login widget to handle this automatically
 
 ___
 ==== Release 5_2_0
